--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
 body {
   font-family: "Noto Serif JP", serif;
+  font-size: 62.5%;
+}
+#header {
+  background-image: url(./images/mian.jpg);
+  width: 100%;
+  height: 100vh;
 }
