--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 }
 #header {
   background-image: url(./images/mian.jpg);
+  background-repeat: no-repeat;
   width: 100%;
   height: 100vh;
 }
