--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
 #header {
   background-image: url(./images/mian.jpg);
   background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: cover;
   width: 100%;
-  height: 100vh;
+  height: 60vh;
+  color: #fff;
 }
