--- a/style.css
+++ b/style.css
@@ -2,13 +2,87 @@
 body {
   font-family: "Noto Serif JP", serif;
   font-size: 62.5%;
+  background-color: #e6e2d7;
 }
 #header {
-  background-image: url(./images/mian.jpg);
+  background-image: url(./images/main.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   object-fit: cover;
   width: 100%;
-  height: 60vh;
+  height: 65vh;
   color: #fff;
+  writing-mode: vertical-rl;
+  margin-bottom: 180px;
+}
+#header h1 {
+  margin: 7%;
+  font-size: 2.5rem;
+}
+#navigation ul li {
+  padding: 2%;
+  font-size: 1rem;
+}
+li {
+  list-style: none;
+}
+#header .online {
+  background: rgba(255, 255, 255, 0.2);
+  position: absolute;
+  left: 40px;
+  padding: 1%;
+}
+#header .online a {
+  display: block;
+  border: solid 1px #ccc;
+  padding: 30px 18px;
+  font-size: 1rem;
+}
+a {
+  color: #fff;
+  text-decoration: none;
+}
+#news {
+  writing-mode: vertical-rl;
+  padding-bottom: 180px;
+  margin: 0 auto;
+}
+#news h2 {
+  font-size: 2.5rem;
+}
+.ne {
+  font-size: 0.9rem;
+}
+.title {
+  font-size: 1rem;
+  border-left: black;
+  padding: 7% 4% 0;
+}
+.title dt {
+  border-right: solid;
+  border-width: 1px;
+  padding: 3%;
+}
+.title dd {
+  padding: 4%;
+}
+#section1 {
+  display: flex;
+  flex-direction: row-reverse;
+  padding: 9%;
+}
+#section1 h2 {
+  display: block;
+}
+#section1 h2 span {
+  writing-mode: vertical-rl;
+}
+.section1-title {
+  font-size: 2.5rem;
+}
+.section1-subtitle {
+  font-size: 0.9rem;
+}
+.create img {
+  width: 500px;
 }
