--- a/style.css
+++ b/style.css
@@ -58,31 +58,110 @@ a {
   border-left: black;
   padding: 7% 4% 0;
 }
-.title dt {
+.notice-item {
   border-right: solid;
   border-width: 1px;
   padding: 3%;
 }
-.title dd {
+.notice-item:last-child {
+  border-left: 1px solid black;
+}
+.notice-title {
   padding: 4%;
+  display: block;
 }
 #section1 {
   display: flex;
   flex-direction: row-reverse;
   padding: 9%;
+  align-items: flex-end;
 }
 #section1 h2 {
-  display: block;
+  white-space: nowrap;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 #section1 h2 span {
   writing-mode: vertical-rl;
 }
-.section1-title {
+.section-title {
   font-size: 2.5rem;
 }
-.section1-subtitle {
+.section-subtitle {
   font-size: 0.9rem;
 }
-.create img {
+.product {
+  position: relative;
+}
+.product img {
   width: 500px;
 }
+.product-text {
+  color: #fff;
+  font-size: 1.2rem;
+  padding: 50px 0;
+  width: 56%;
+  margin: 0;
+  background: rgba(249, 233, 6, 0.6);
+  text-align: center;
+  position: absolute;
+  bottom: -20px;
+}
+.product-text.secondary {
+  background: rgba(149, 42, 38, 0.6);
+  bottom: 118px;
+  left: 220px;
+}
+#section2 {
+  display: flex;
+  margin-bottom: 180px;
+}
+#section2 h2 {
+  writing-mode: vertical-rl;
+}
+.map iframe {
+  width: 100%;
+}
+#footer {
+  display: block;
+  color: #fff;
+  background-color: #000;
+  height: 400px;
+}
+#footer .detail {
+  writing-mode: vertical-rl;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column-reverse;
+  width: 95%;
+  margin: 0 auto;
+  height: 370px;
+}
+.footer-create {
+  margin: 10%;
+}
+.text-create {
+  font-size: 2.5rem;
+}
+.footer-last {
+  text-align: center;
+  padding-bottom: 10px;
+}
+.mail {
+  margin: 10%;
+  font-size: 0.9rem;
+}
+.address {
+  margin: 10%;
+  font-size: 0.7rem;
+}
+.address-text {
+  line-height: 25px;
+}
+.footer-item {
+  line-height: 31px;
+  font-size: 0.9rem;
+}
+
+@media screen and(max-width: 480px);
