--- a/style.css
+++ b/style.css
@@ -8,12 +8,14 @@ body {
   background-image: url(./images/main.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   object-fit: cover;
   width: 100%;
-  height: 65vh;
+  height: 100vh;
   color: #fff;
   writing-mode: vertical-rl;
   margin-bottom: 180px;
+  position: relative;
 }
 #header h1 {
   margin: 7%;
@@ -31,6 +33,7 @@ li {
   position: absolute;
   left: 40px;
   padding: 1%;
+  top: 49%;
 }
 #header .online a {
   display: block;
@@ -51,7 +54,7 @@ a {
   font-size: 2.5rem;
 }
 .ne {
-  font-size: 0.9rem;
+  font-size: 1rem;
 }
 .title {
   font-size: 1rem;
@@ -69,6 +72,7 @@ a {
 .notice-title {
   padding: 4%;
   display: block;
+  font-size: 1rem;
 }
 #section1 {
   display: flex;
@@ -161,14 +165,43 @@ a {
   font-size: 0.9rem;
   display: block;
 }
+.footer-nav {
+  padding-inline-start: 0%;
+}
 
 @media screen and (max-width: 480px) {
-  .product img {
+  #header {
+    background-image: url(./images/media-img.jpg);
+  }
+  #news {
+    margin-right: 0%;
+    padding-bottom: 10px;
     width: 100%;
+  }
+  #news h2 {
+    margin-right: 0%;
+  }
+  #header .online {
+    top: 67%;
+  }
+  #section1 {
+    padding-bottom: 100px;
+  }
+  .product img {
+    width: 289.5px;
+  }
+  .product-text {
+    width: 53%;
+    padding: 30px 0;
+    font-size: 0.8rem;
+    right: 50%;
   }
   .product-text.secondary {
     bottom: 118px;
     left: 44%;
+  }
+  .section-title {
+    font-size: 1rem;
   }
   .section-subtitle {
     display: none;
@@ -176,7 +209,13 @@ a {
   .detail {
     width: 100%;
   }
+  .footer-create {
+    margin-right: 0;
+  }
   .notice-item:nth-child(n + 4) {
     display: none;
+  }
+  .notice-item:nth-child(3) {
+    border-left: 1px solid black;
   }
 }
