--- a/style.css
+++ b/style.css
@@ -172,20 +172,23 @@ a {
 @media screen and (max-width: 480px) {
   #header {
     background-image: url(./images/media-img.jpg);
+    margin-bottom: 80px;
   }
   #news {
     margin-right: 0%;
-    padding-bottom: 10px;
+    padding-bottom: 80px;
     width: 100%;
   }
   #news h2 {
     margin-right: 0%;
+    margin-top: 0;
   }
   #header .online {
     top: 67%;
   }
   #section1 {
     padding-bottom: 100px;
+    align-items: flex-start;
   }
   .product img {
     width: 289.5px;
@@ -201,10 +204,13 @@ a {
     left: 44%;
   }
   .section-title {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
   .section-subtitle {
     display: none;
+  }
+  #section2 {
+    margin-bottom: 100px;
   }
   .detail {
     width: 100%;
